--- a/src/components/DoughnutChart/DoughnutChart.scss
+++ b/src/components/DoughnutChart/DoughnutChart.scss
@@ -1,13 +1,12 @@
 .doughnut-container {
     display: flex;
-    min-height: 40vh;
     // border: 1px solid black;
 
 
     .doughnut-wrapper {
         display: flex;
-        margin: 50px;
-        // border: 1px solid orange;
-
+        width: 31.25vw;
+        height: 20.820vw;
+        //border: 1px solid orange;
     }
 }
