--- a/src/components/Table/Table.scss
+++ b/src/components/Table/Table.scss
@@ -1,41 +1,119 @@
 .Charttable-container{
      min-width: 25vw;
-     margin: 40px;
-     padding: 15px;
-     // border: 1px solid black;
+     width: 29.451vw;
+     margin: 0px;
+     padding-top: 1.765vw;
+     padding-right: 1.209vw;
+     padding-bottom: 1.278vw;
+     padding-left: 1.209vw;
      box-shadow: 1px 2px 6px 3px #DBDBDB;
      border-radius: 5px;
+     background-color: #ffffff;
+     font-size: 0.9375vw;
 
-    .rt-tr-group{
-        line-height: 2;
+    .rt-tr-group {
+        line-height: 1.264vw;
+    }
+
+    .-striped {
+        border: solid 1px #ffffff;
+    }
+
+    .rt-tr-group div div:nth-child(even) {
+        border-left: solid 1px #f2f2f2;
+        border-right:solid 1px #f2f2f2;
+    }
+
+    .-header {
+        height: 0;
     }
 }
+
 .transactiontable-container{
+    //border: 1px solid blue;    
     display: flex;
     flex-direction: column;
-    padding: 2vw;
-    // border: 1px solid black;
     min-width:80vw;
 
     .transaction-container{
-        // border: 1px solid blue;
+        //border: 1px solid blue;
+        margin-top: 0.752vw;
+        margin-right: 1.302vw;
+        margin-bottom: 1,239vw;
+        margin-left: 1.302vw;
 
         .table-title {
             text-align: left;
+            margin-bottom: 0.547vw;
+            font-size: 1.25vw;
         }
 
         .table-filters {
-            display: flex;
-            // border: 1px solid pink;
+            //border: 1px solid pink;
+            display: flex;            
             flex-direction: row;
             justify-content: space-between;
         }
     }
     .reacttable-container{
-        // border: 1px solid black;
+        //border: 1px solid black;
         min-width: 50vw;
-        margin: auto;
+        width: 61.351vw;
+        margin-top: 6.823vw;
+        margin-left: 10.4154vw;
         box-shadow: 1px 2px 6px 3px #DBDBDB;
-        border-radius: 5px;
+        border-radius: 15px;
+        font-size: 0.9375vw;
+        padding-left: 1.302vw;
+        padding-right: 1.302vw;
+        padding-top: 1.146vw;
+        padding-bottom: 2.127vw;
+
+        .-striped {
+            border: solid 1px #ffffff;
+        }
      }
 }
+
+.trasaction-input-control {
+    width: 13.874vw !important;
+    box-shadow: 3px 3px 3px #DBDBDB;
+    margin-bottom: 7.923%;
+    font-size: 0.9375vw !important;
+}
+
+.transaction-select-control {
+    font-size: 0.9375vw !important;
+}
+
+/*
+** For Pagination Component
+*/
+.Table__itemCount {
+    /* margin-top: 10px; */
+    font-size: 0.9375vw;
+  }
+  
+  .Table__pagination {
+    display: flex;
+    justify-content: center;
+    padding: 20px 10px;
+  }
+  
+  .Table__pageButton {
+    font-size: 0.9375vw;
+    outline: none;
+    border: none;
+    background-color: transparent;
+    cursor: pointer;
+  }
+  
+  .Table__pageButton:disabled {
+    cursor: not-allowed;
+    color: gray;
+  }
+  
+  .Table__pageButton--active {
+    color: #45b3e3;
+    font-weight: bold;
+  }
