--- a/src/pages/Dashboard/Dashboard.scss
+++ b/src/pages/Dashboard/Dashboard.scss
@@ -1,40 +1,42 @@
 .dashboard-container {
     display: flex;
     flex-direction: row;
-
+    background-color: #ffffff;
+    font-family: 'Lato';
 
     .content-wrapper{
         display: flex;
         flex-direction: column;
-        justify-content: center;
-        width: -webkit-fill-available;
-
+        justify-content: left;
+        //width: -webkit-fill-available;
 
         .overview-container{
             display: flex;
             flex-direction: row;
-            justify-content: center;
+            justify-content: left;
 
             .overview-table{
-                // border: 1px solid red;
-                margin:25px;
-                display: flex;
+                //border: 1px solid red;
+                margin-left:7.758vw;
+                margin-top: 3.156vw;
+                margin-right: 3.414vw;
             }
+
             .table-container{
-                border: 1px solid red;
+                border: 1px solid green;
             }
+
             .overview-graph {
-                // border: 1px solid blue;
-                margin: 30px;
+                //border: 1px solid blue;
+                width: 29.241vw;
+                margin-top: 2.221vw;
             }
         }
 
-
-
         .footer-container{
+            margin-top: 7.142vw;
             min-height: 8vh;
-            border-radius: 10px;
-            background-color: black;
+            background-color: #373737;
         }
     }
 }
