--- a/src/components/Sidebar/Sidebar.scss
+++ b/src/components/Sidebar/Sidebar.scss
@@ -29,4 +29,9 @@
         text-align: left;
         padding-left: 36px;
     }
+
+    .nav-link{
+        color: inherit;
+        text-decoration: inherit;
+    }
 }
