Made Side Menu Options clickable Added empty pages
Signed-off-by: Ayesha Hafeez <ayesha.h@live.com>

--- a/src/components/Sidebar/Sidebar.scss
+++ b/src/components/Sidebar/Sidebar.scss
@@ -34,4 +34,11 @@
         color: inherit;
         text-decoration: inherit;
     }
+
+    .nav-link-top{
+        color: white;
+        text-decoration: none;
+    }
+
+
 }
