Added colors to charts Moved Sign In to reducer Aligned the components on Dashboard Number formatting
Signed-off-by: Ayesha Hafeez <ayesha.h@live.com>

--- a/src/components/LineChart/LineChart.scss
+++ b/src/components/LineChart/LineChart.scss
@@ -19,8 +19,8 @@
         //border: 1px solid orange;
         display: flex;
         flex-direction: column;
-        width: 61.458vw;
-        margin-left: 10.415vw;
+        // width: 61.458vw;
+        // margin-left: 10.415vw;
         box-shadow: 1px 5px 12px 6px #DBDBDB;
         padding-top: 1.25vw;
         padding-left: 0.683vw;
