--- a/src/components/LineChart/LineChart.scss
+++ b/src/components/LineChart/LineChart.scss
@@ -28,3 +28,35 @@
         padding-bottom: 1.25vw;
     }
 }
+
+.chart-dropdown{
+  background: #FFFFFF 0% 0% no-repeat padding-box;
+  box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.2);
+  border-radius: 5px;
+  opacity: 1;
+}
+
+.chart-link-active{
+  text-align: center;
+  letter-spacing: 0;
+  color: #40BBF2;
+  opacity: 1;
+  padding-right: 90px;
+  &:hover {
+    cursor: pointer;
+   }
+
+}
+
+
+
+.chart-link{
+  text-align: center;
+  letter-spacing: 0;
+  color: #646464;
+  opacity: 1;
+  padding-right: 90px;
+  &:hover {
+    cursor: pointer;
+   }
+}
