--- a/src/components/DoughnutChart/DoughnutChart.scss
+++ b/src/components/DoughnutChart/DoughnutChart.scss
@@ -1,12 +1,13 @@
 .doughnut-container {
     display: flex;
+    width: 100%;
     // border: 1px solid black;
 
 
     .doughnut-wrapper {
         display: flex;
-        width: 31.25vw;
-        height: 20.820vw;
+        // width: 31.25vw;
+        // height: 20.820vw;
         //border: 1px solid orange;
     }
 }
