--- a/src/components/LineChart/LineChart.scss
+++ b/src/components/LineChart/LineChart.scss
@@ -34,6 +34,10 @@
   box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.2);
   border-radius: 5px;
   opacity: 1;
+  text-align: center;
+  letter-spacing: 0;
+  color: #646464;
+  padding: 5px;
 }
 
 .chart-link-active{
