--- a/src/pages/Dashboard/Dashboard.scss
+++ b/src/pages/Dashboard/Dashboard.scss
@@ -33,10 +33,23 @@
             }
         }
 
-        .footer-container{
-            margin-top: 7.142vw;
-            min-height: 8vh;
-            background-color: #373737;
-        }
+       
     }
+}
+
+.footer-container{
+    // margin-top: 7.142vw;
+    min-height: 8vh;
+    background-color: #373737;
+}
+
+.side-margin{
+     padding-right: 15px;
+    padding-left: 15px;
+    margin-right: auto;
+    margin-left: auto;
+}
+
+.no-margin{
+    margin:0px !important;
 }
