affiliates page completed
Signed-off-by: Ayesha Hafeez <ayesha.h@live.com>

--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,11 @@
   font-style: normal;
 }
 
+html{
+  height: 100%;
+  margin: 0;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
@@ -14,9 +19,16 @@ body {
   -moz-osx-font-smoothing: grayscale;
 
   background-color: #f2f2f2;
+  min-height: 100%;
+  
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+body > #root > div {
+  min-height: 100vh !important;
+  height: 100vh !important;
 }
