Customized transfer modal to work for investments page
Signed-off-by: Ayesha Hafeez <ayesha.h@live.com>

--- a/src/components/InfoCard/InfoCard.scss
+++ b/src/components/InfoCard/InfoCard.scss
@@ -17,7 +17,9 @@
         opacity: 1;
         margin-left: 1vw;
         padding-top: 1vw;
+        font: 200px 24px/29px Lato;
 
+        
     }
 
     .info-value{
@@ -28,6 +30,8 @@
         letter-spacing: 1.02px;
         color: #4D96CC;
         opacity: 1;
+
+        
 
     }
 }
