Stats Page Completed

--- a/src/components/InfoCard/InfoCard.scss
+++ b/src/components/InfoCard/InfoCard.scss
@@ -17,7 +17,7 @@
         // font-weight: 400;
         // font-size: small;
         letter-spacing: 0.72px;
-        color: #646464;
+        color: #646464d4;
         opacity: 1;
         margin-left: 0.6vw;
         padding-top: 1vw;
