--- a/src/components/DoughnutChart/DoughnutChart.scss
+++ b/src/components/DoughnutChart/DoughnutChart.scss
@@ -1,6 +1,11 @@
 .doughnut-container {
     display: flex;
-    width: 100%;
+    // position: absolute;
+    // width: 100% !important;
+    width:100% !important;
+    // padding: -20px;
+    height:100% !important;
+    margin-top: 0.5vw;
     // border: 1px solid black;
 
 
