css to fix row cols of modals

--- a/src/components/DepositModal/DepositModal.scss
+++ b/src/components/DepositModal/DepositModal.scss
@@ -12,9 +12,9 @@
         // margin-top: 4.476vw;
         // margin-left: 10.415vw;
         padding-top: 2.760vw;
-        padding-right: 22.240vw;
+        padding-right: 0;
         padding-bottom: 1.823vw;
-        padding-left: 22.240vw;
+        padding-left: 0;
         box-shadow: 1px 5px 12px 6px #DBDBDB;
         border-radius: 15px;
         //border: solid 1px black;
