forgot password is now responsive

--- a/src/pages/ForgotPassword/ForgotPassword.scss
+++ b/src/pages/ForgotPassword/ForgotPassword.scss
@@ -18,11 +18,30 @@
 }
 
 .forgotPwd-btn {
-    width: 18.385vw;
+    //width: 18.385vw;
     border-radius: 40px !important;
     background-color: #4d96cc !important;
 }
 
 .forgotPwd-options-container{
     margin-top: 8.979%;
+    text-align: center;
+    
 }
+
+.container {  
+    background-color:white;
+    border-radius: .5em;
+  //  padding: 10px;
+    display: flex;
+    height: 100%;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .item {
+    justify-content: center;
+    width: 100%;
+    background-color: white;
+  }
