fixed bug that breaks other pages

--- a/src/pages/ForgotPassword/ForgotPassword.scss
+++ b/src/pages/ForgotPassword/ForgotPassword.scss
@@ -29,7 +29,7 @@
     
 }
 
-.container {  
+.formbox {  
     background-color:white;
     border-radius: .5em;
   //  padding: 10px;
@@ -40,8 +40,8 @@
     align-items: center;
   }
   
-  .item {
-    justify-content: center;
-    width: 100%;
-    background-color: white;
-  }
+//   .item {
+//     justify-content: center;
+//     width: 100%;
+//     background-color: white;
+//   }
