signup pages responsive and white

--- a/src/pages/SignIn/SignIn.scss
+++ b/src/pages/SignIn/SignIn.scss
@@ -18,7 +18,7 @@
 }
 
 .signin-btn {
-  width: 8.854vw;
+  width: auto;
   border-radius: 40px !important;
   background-color: #4d96cc !important;
 }
