--- a/src/pages/SignUp/SignUp.scss
+++ b/src/pages/SignUp/SignUp.scss
@@ -19,7 +19,7 @@
 
 .signup-btn{
   margin-top: 1.761%;
-  width: 8.854vw;
+  width: auto;
   border-radius: 40px !important;
   background-color: #4d96cc !important;
 }
