forgot password now has bigger input and button

--- a/src/pages/ForgotPassword/ForgotPassword.scss
+++ b/src/pages/ForgotPassword/ForgotPassword.scss
@@ -1,15 +1,17 @@
 .forgotPwd-container {
-    margin-left: 21.667%;
-    margin-right: 21.667%;
-    margin-top: 15%;
-    padding-left: 13.542%;
-    padding-right: 13.542%;
-    padding-top: 6.615%;
-    padding-bottom: 8.542%;
+    // margin-left: 21.667%;
+    // margin-right: 21.667%;
+    // margin-top: 15%;
+    // padding-left: 13.542%;
+    // padding-right: 13.542%;
+    // padding-top: 6.615%;
+    // padding-bottom: 8.542%;
     background-color: #ffffff;
     font-family: 'Lato';
     font-size: 1.5rem, !important;
     border-radius: 10px !important;
+    justify-content: center;
+    align-items: center;
 }
 
 .forgotPwd-form-control {
@@ -40,11 +42,11 @@
     align-items: center;
   }
   
-//   .item {
-//     justify-content: center;
-//     width: 100%;
-//     background-color: white;
-//   }
+  .item {
+    justify-content: center;
+    width: 100%;
+    background-color: white;
+  }
 
 .signup-link{
     float: left;
