--- a/src/pages/SignIn/SignIn.scss
+++ b/src/pages/SignIn/SignIn.scss
@@ -18,7 +18,7 @@
 }
 
 .signin-btn {
-  width: auto;
+  width: 100%;
   border-radius: 40px !important;
   background-color: #4d96cc !important;
 }
@@ -37,4 +37,21 @@
 .alert-text {
   padding-left: 0.75rem !important;
   text-align: left;
+}
+
+.formbox {  
+  background-color:white;
+  border-radius: .5em;
+//  padding: 10px;
+  display: flex;
+  height: 100%;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+}
+
+.item {
+  justify-content: center;
+  width: 100%;
+  background-color: white;
 }
