--- a/src/pages/SignUp/SignUp.scss
+++ b/src/pages/SignUp/SignUp.scss
@@ -19,7 +19,24 @@
 
 .signup-btn{
   margin-top: 1.761%;
-  width: auto;
+  width: 100%;
   border-radius: 40px !important;
   background-color: #4d96cc !important;
+}
+
+.formbox {  
+  background-color:white;
+  border-radius: .5em;
+//  padding: 10px;
+  display: flex;
+  height: 100%;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+}
+
+.item {
+  justify-content: center;
+  width: 100%;
+  background-color: white;
 }
