menu is more accessible

--- a/src/components/ResponsiveSidebar/ResponsiveSidebar.scss
+++ b/src/components/ResponsiveSidebar/ResponsiveSidebar.scss
@@ -58,8 +58,9 @@
   }
 
 #overlay-content{
-    width: 50%;
-    padding-top: 64px //Height of bar
+    width: 75%;
+    padding-top: 64px; //Height of bar
+    height: 100%;
 }
 
 #top-bar{
