--- a/src/components/WithdrawModal/WithdrawModal.scss
+++ b/src/components/WithdrawModal/WithdrawModal.scss
@@ -22,14 +22,15 @@
         .form{
             margin-left: auto;
             margin-right: auto;
-            width: 17.022vw;
+            width: 100%;
 
             .Trans-form-control {
                 margin-bottom: 2.031vw;
             }
 
             .transfer-btn {
-                width: 10.208vw;
+                min-width: auto;
+                width: 100%;
             }
         }
 
