--- a/src/pages/Affiliates/Affiliates.scss
+++ b/src/pages/Affiliates/Affiliates.scss
@@ -1,45 +1,48 @@
-.main-container {
-    display: flex;
-    flex-direction: row;
-    background-color: #ffffff;
-    font-family: 'Lato';
-    min-height: 100%;
+// .main-container {
+//     display: flex;
+//     flex-direction: row;
+//     background-color: #ffffff;
+//     font-family: 'Lato';
+//     min-height: 100%;
+//     height: 100%;
 
-    .navigation{
-        display: flex;
-        flex-direction: column;
-        justify-content: left;
-    }
+//     .navigation{
+//         display: flex;
+//         flex-direction: column;
+//         justify-content: left;
+//     }
    
 
-    .content-wrapper{
-        display: flex;
-        flex-direction: column;
-        justify-content: left;
-        margin-left: 0px;
-        margin-right: 0px;
-        max-width: 100%;
-        // min-height: 500px;
-        //width: -webkit-fill-available;
+//     .content-wrapper{
+//         display: flex;
+//         flex-direction: column;
+//         justify-content: left;
+//         margin-left: 0px;
+//         margin-right: 0px;
+//         max-width: 100%;
+//         height: 100%;
+//         // min-height: 500px;
+//         //width: -webkit-fill-available;
 
      
-    }
+//     }
 
-    .footer-container {
-        // display: flex;
-        // position: fixed;
-        // bottom: 0;
-        // right: 0;
-        // width: 100%;
-        min-height: 8vh;
-        background-color: #373737;
+//     .footer-container {
+//         // display: flex;
+//         // position: fixed;
+//         // bottom: 0;
+//         // right: 0;
+//         // width: 100%;
+//         min-height: 8vh;
+//         background-color: #373737;
 
     
-    }
-}
+//     }
+// }
 
 .invite-form{
     // padding: 2.5vw;
+    height: 100%;
 
     .invite-form-control{
         margin-top: 3vw;
@@ -52,6 +55,75 @@
         background: #4D96CC 0% 0% no-repeat padding-box;
         border-radius: 30px;
         opacity: 1;
-        padding: 0.5vw 2.5vw;
+        //padding: 0.5vw 2.5vw;
+        width: 100%;
     }
+}
+
+.main-container{
+    height: -webkit-fill-available;
+}
+
+.dashboard-container {
+    display: flex;
+    flex-direction: row;
+    background-color: #ffffff;
+    font-family: 'Lato';
+
+    .content-wrapper{
+        display: flex;
+        flex-direction: column;
+        justify-content: left;
+        //width: -webkit-fill-available;
+        padding-top: 64px;
+
+        .overview-container{
+            display: flex;
+            flex-direction: row;
+            justify-content: left;
+
+            .overview-table{
+                //border: 1px solid red;
+                margin-left:7.758vw;
+                margin-top: 3.156vw;
+                margin-right: 3.414vw;
+            }
+
+            .table-container{
+                border: 1px solid green;
+            }
+
+            .overview-graph {
+                //border: 1px solid blue;
+                width: 29.241vw;
+                margin-top: 2.221vw;
+            }
+        }
+
+       
+    }
+}
+
+.footer-container{
+    // margin-top: 7.142vw;
+    min-height: 8vh;
+    background-color: #373737;
+    position:absolute;
+    bottom:0;
+}
+
+.side-margin{
+     padding-right: 15px;
+    padding-left: 15px;
+    margin-right: auto;
+    margin-left: auto;
+}
+
+.no-margin{
+    margin:0px !important;
+}
+
+.hidescroll{
+  overflow: scroll;
+  scrollbar-width: none; /* Firefox */
 }
