--- a/src/pages/Dashboard/Dashboard.scss
+++ b/src/pages/Dashboard/Dashboard.scss
@@ -9,6 +9,7 @@
         flex-direction: column;
         justify-content: left;
         //width: -webkit-fill-available;
+        padding-top: 64px;
 
         .overview-container{
             display: flex;
@@ -41,6 +42,8 @@
     // margin-top: 7.142vw;
     min-height: 8vh;
     background-color: #373737;
+    position:absolute;
+    bottom:0;
 }
 
 .side-margin{
