--- a/src/components/Table/Table.scss
+++ b/src/components/Table/Table.scss
@@ -10,7 +10,7 @@
      border-radius: 5px;
      background-color: #ffffff;
      //font-size: 0.9375vw;
-     font-size: xx-small;
+     font-size: small;
 
     .rt-tr-group {
         line-height: 1.264vw;
@@ -75,7 +75,7 @@
         box-shadow: 1px 2px 6px 3px #DBDBDB;
         border-radius: 15px;
        // font-size: 0.9375vw;
-        font-size: xx-small;
+        font-size: small;
         padding-left: 1.302vw;
         padding-right: 1.302vw;
         padding-top: 1.146vw;
@@ -92,13 +92,13 @@
     box-shadow: 3px 3px 3px #DBDBDB;
     margin-bottom: 7.923%;
     //font-size: 0.9375vw !important;
-    font-size: xx-small;
+    font-size: small;
     color: #969696;
 }
 
 .transaction-select-control {
     //font-size: 0.9375vw !important;
-    font-size: xx-small;
+    font-size: small;
     text-align: center;
     letter-spacing: 0.54px;
     color: #646464;
@@ -112,7 +112,7 @@
 .Table__itemCount {
     /* margin-top: 10px; */
     //font-size: 0.9375vw;
-    font-size: xx-small;
+    font-size: small;
   }
   
   .Table__pagination {
@@ -123,7 +123,7 @@
   
   .Table__pageButton {
    // font-size: 0.9375vw;
-    font-size: xx-small;
+    font-size: small;
     outline: none;
     border: none;
     background-color: transparent;
