--- a/src/pages/Dashboard/Dashboard.scss
+++ b/src/pages/Dashboard/Dashboard.scss
@@ -42,8 +42,7 @@
     // margin-top: 7.142vw;
     min-height: 8vh;
     background-color: #373737;
-    position:absolute;
-    bottom:0;
+    width: max-content;
 }
 
 .side-margin{
