--- a/src/pages/Affiliates/Affiliates.scss
+++ b/src/pages/Affiliates/Affiliates.scss
@@ -108,8 +108,8 @@
     // margin-top: 7.142vw;
     min-height: 8vh;
     background-color: #373737;
-    position:absolute;
-    bottom:0;
+    // position:absolute;
+    // bottom:0;
 }
 
 .side-margin{
