--- a/src/pages/Affiliates/Affiliates.scss
+++ b/src/pages/Affiliates/Affiliates.scss
@@ -108,6 +108,7 @@
     // margin-top: 7.142vw;
     min-height: 8vh;
     background-color: #373737;
+    width: -webkit-fill-available;
     // position:absolute;
     // bottom:0;
 }
