top bar and side bar realignment

--- a/src/components/ResponsiveSidebar/ResponsiveSidebar.scss
+++ b/src/components/ResponsiveSidebar/ResponsiveSidebar.scss
@@ -59,7 +59,7 @@
 
 #overlay-content{
     width: 75%;
-    padding-top: 64px; //Height of bar
+    // padding-top: 64px; //Height of bar
     height: 100%;
 }
 
