--- a/src/components/Sidebar/Sidebar.scss
+++ b/src/components/Sidebar/Sidebar.scss
@@ -21,6 +21,11 @@
         margin-top: 25px;
     }
 
+    .scroll{
+        height: 100%;
+        overflow-y: auto;
+    }
+
 
     .nav-item{
         width:100%;
