full screen fixed button for dashboard

--- a/src/pages/Dashboard/Dashboard.scss
+++ b/src/pages/Dashboard/Dashboard.scss
@@ -60,3 +60,10 @@
   overflow: scroll;
   scrollbar-width: none; /* Firefox */
 }
+
+.expandButton{
+    position: absolute;
+    top:0;
+    right:0;
+    border:none;
+}
