--- a/src/components/Sidebar/Sidebar.scss
+++ b/src/components/Sidebar/Sidebar.scss
@@ -1,6 +1,6 @@
 .sidebar-container {
-    min-width:210px ;
-    width:auto;
+   //min-width:210px ;
+    width:100%;
     height:100%;
     // float: left;
     background-color: #646464;
