--- a/src/components/Sidebar/Sidebar.scss
+++ b/src/components/Sidebar/Sidebar.scss
@@ -48,5 +48,13 @@
         text-decoration: none;
     }
 
+    
 
+
+}
+
+.investment{
+    width: fit-content;
+    min-height: 35px;
+    padding-right: 20px;
 }
