--- a/src/pages/Contact/Contact.scss
+++ b/src/pages/Contact/Contact.scss
@@ -45,6 +45,7 @@
     height: -webkit-fill-available;
 }
 
+
 .dashboard-container {
     display: flex;
     flex-direction: row;
@@ -101,6 +102,14 @@
     margin-left: auto;
 }
 
+.submitBtn {
+    width: 20%;
+    color: white;
+    height: 40px;
+    border-radius: 40px !important;
+    background-color: #4d96cc !important;
+}
+
 .no-margin {
     margin: 0px !important;
 }
@@ -109,6 +118,10 @@
     overflow: scroll;
     scrollbar-width: none;
     /* Firefox */
+}
+
+.contact-form-control {
+    box-shadow: 0px 12px 6px #DBDBDB;
 }
 
 .contact {
